fix: adjust padding and height for list items in collapse content

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -73,6 +73,11 @@
   .collapse__content {
     margin-top: -14px;
     border-radius: 0 0 $medium-radius $medium-radius;
+    p, ul {
+      padding-top: 18px;
+      padding: 0 1rem;
+      height: 100px;
+    }
   }
 
   .collapse__icon {
